Fixed layout shift

--- a/AC-Control/Client/src/Styles/styles.scss
+++ b/AC-Control/Client/src/Styles/styles.scss
@@ -128,8 +128,8 @@ button {
 
 
 .menu-container {
-    width: 65px;
-    flex-shrink: 0;
+    position: absolute;
+    z-index: 5;
 }
 
 .menu {
@@ -139,8 +139,7 @@ button {
     top: 0;
     height: 100%;
     transition: transform 0.5s ease;
-    max-width: calc(100vw - 40px);
-    z-index: 5;
+    max-width: calc(100vw - 40px);    
     border-left: solid 1px #000;
 
     .expand {
